Restructured much of CSS to map control buttons correctly and for better consistency, legibility, and responsiveness. Revised and rewrote Help and Splash screens. Better layering of modals. Improved language detection warning. Cleaned up code.

--- a/css/main.css
+++ b/css/main.css
@@ -73,13 +73,6 @@ textarea {
    Browser Upgrade Prompt
    ========================================================================== */
 
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
 /* ==========================================================================
    Helper classes
    ========================================================================== */
@@ -95,16 +88,6 @@ textarea {
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
 
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
@@ -241,13 +224,6 @@ a:hover {
     position: relative;
 }
 
-.dragscroll {
-    cursor: -webkit-grab;
-    cursor: -moz-grab;
-    /*cursor : -o-grab;*/
-    cursor: grab;
-}
-
 .dragscroll:active {
     cursor: -webkit-grabbing;
     cursor: -moz-grabbing;
@@ -291,11 +267,8 @@ select {
     width: 49%;
 }
 
-.myColumn, #Help, #vocab {
-    /*margin: 4px;*/
+.myColumn, #vocab {
     box-shadow: 5px 5px 10px gray; /* causes major jank with Chrome mobile 64.0.3282,137, 2018 */
-    /*text-shadow: 0 0 1px rgba(0, 0, 0, 0.5);*/ /* causes jank on large tablet */
-    /*font-weight: bold;*/
     text-rendering: optimizeLegibility;
     -moz-font-feature-settings: "liga" 1, "kern" 1;
     -ms-font-feature-settings: "liga" 1, "kern" 1;
@@ -304,12 +277,21 @@ select {
     font-feature-settings: "liga" 1, "kern" 1;
 }
 
-#Help, #vocab {
+#vocab {
+    background-color: white;
+    border-radius: 6px;
+}
+
+#vocab {
     font-family: sans-serif;
     font-weight: normal;
-    border-radius: 6px;
-    background-color: white;
-    box-shadow: 5px 5px 10px gray;
+    /*box-shadow: 5px 5px 10px gray; !* causes major jank with Chrome mobile 64.0.3282,137, 2018 *!*/
+    text-rendering: optimizeLegibility;
+    -moz-font-feature-settings: "liga" 1, "kern" 1;
+    -ms-font-feature-settings: "liga" 1, "kern" 1;
+    -o-font-feature-settings: "liga" 1, "kern" 1;
+    -webkit-font-feature-settings: "liga" 1, "kern" 1;
+    font-feature-settings: "liga" 1, "kern" 1;
 }
 
 .myPara, .highlighted {
@@ -380,45 +362,45 @@ select {
     background: red;
 }
 
-.iconButton {
-    /*position: relative;*/
-    /*font-family: -webkit-pictograph;*/
-    /*font-family: fas;*/
+.iconButton, .closeIcon, .helpIcon {
     font-size: 2em;
     font-weight: bold;
-    /*line-height: 1;*/
-    /*color: #428bca;*/
     color: white;
-    /*text-align: center;*/
-    /*white-space: nowrap;*/
-    /*vertical-align: top;*/
     background-color: transparent;
-    /*border-radius: 5px;*/
-    /*display: block;*/
-    padding: 7px;
-    margin: 4px;
-    /*margin-bottom: 10px;*/
-    /*border: 2px solid #428bca;*/
-    /*border: 0;*/
     -webkit-transition: all 0.2s;
     -moz-transition: all 0.2s;
     -o-transition: all 0.2s;
     text-shadow: 4px 4px 9px #334455
 }
 
-.iconButton:hover {
+.iconButton {
+    padding: 7px;
+    margin: 4px;
+}
+
+.closeIcon {
+    position: fixed;
+    right: 3%;
+    bottom: 3%;
+}
+
+.closeButton {
+    position: fixed;
+    left: 3%;
+    bottom: 3%;
+}
+
+.iconButton:hover, .closeIcon:hover, .closeButton:hover {
     color: red;
-    /*background: white;*/
 }
 
 /* button moves "down" when clicked: */
-.iconButton:active {
-    /*transform: translateY(6px);*/
+.iconButton:active, .closeIcon:active, .closeButton:hover {
     transform: translate(3px, 3px);
 }
 
 /* button changes after click: */
-.iconButton:focus {
+.iconButton:focus, .closeIcon:focus, .closeButton:hover {
     color: black;
     background: red;
 }
@@ -440,7 +422,7 @@ select {
 }
 
 #leftFilePopup, #rightFilePopup {
-    z-index: 100;
+    z-index: 30;
     position: absolute;
     display: none;
     top: 20%;
@@ -469,34 +451,6 @@ select {
     font-weight: bold;
 }
 
-.splash {
-    z-index: 102;
-    position: absolute;
-    background-color: white;
-    top: 5%;
-    left: 5%;
-    width: 80%;
-    /*height: 80%; auto-adjust to content size */
-    padding: 5%;
-    box-shadow: 5px 5px 10px gray;
-    height: 90vh;
-    overflow: auto;
-}
-
-/*#Help, #Info {*/
-#Help {
-    z-index: 102;
-    position: absolute;
-    background-color: white;
-    width: 80%;
-    padding: 5%;
-    box-shadow: 5px 5px 10px gray;
-    overflow: auto;
-    left: 5%;
-/*    top: -100%;
-    transition: top .5s;*/
-}
-
 .vertContainer,
 .horizContainer,
 .container {
@@ -519,12 +473,6 @@ select {
 .horizElement {
     margin-left: 2%;
     width: 96%
-}
-
-.container.space-around {
-    justify-content: space-around;
-    margin-left: 4%;
-    width: 94%
 }
 
 /*********** Modal styles *************/
@@ -566,11 +514,14 @@ select {
     line-height: .8em;
     font-size: 55px;
     font-weight: bold;
+    position: fixed;
+    right: 13%;
+    bottom: 13%;
 }
 
 .modal-close:hover,
 .modal-close:focus {
-    color: #000;
+    color: red;
     text-decoration: none;
     cursor: pointer;
 }
@@ -616,86 +567,28 @@ select {
     cursor: pointer;
 }
 
-
-.transition-topleft {
-    position: relative;
-    transition: top 0.4s, opacity 0.4s;
-}
-
-/* Animations */
-.animate-topleft {
-    position: relative;
-    animation: animatetopleft 0.4s
-}
-
-@keyframes animatetopleft {
-    from {
-        top: -300px;
-        left: -300px;
-        opacity: 0
-    }
-    to {
-        left: 0;
-        top: 0;
-        opacity: 1
-    }
-}
-
-.animate-top {
-    position: relative;
-    animation: animatetop 0.4s
-}
-
-@keyframes animatetop {
-    from {
-        top: -300px;
-        opacity: 0
-    }
-    to {
-        top: 0;
-        opacity: 1
-    }
-}
-
-.animate-left {
-    position: relative;
-    animation: animateleft 0.4s
-}
-
-@keyframes animateleft {
-    from {
-        left: -300px;
-        opacity: 0
-    }
-    to {
-        left: 0;
-        opacity: 1
-    }
-}
-
 /* Modal animations, from https://tympanus.net/codrops/2013/06/25/nifty-modal-window-effects */
-
 .md-modal {
 	position: fixed;
-	top: 50%;
-	left: 50%;
-	width: 50%;
-	max-width: 630px;
-	min-width: 320px;
-	height: auto;
+	top: 10%;
+	left: 10%;
+	width: 80%;
+	height: 80%;
 	z-index: 20;
 	visibility: hidden;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
-	-webkit-transform: translateX(-50%) translateY(-50%);
-	-moz-transform: translateX(-50%) translateY(-50%);
-	-ms-transform: translateX(-50%) translateY(-50%);
-	transform: translateX(-50%) translateY(-50%);
+    overflow: auto;
 }
 
 .md-show {
 	visibility: visible;
+}
+
+/* Show on top of other modals */
+.md-show-top {
+	z-index: 40;
 }
 
 .md-overlay {
@@ -708,14 +601,18 @@ select {
 	z-index: 10;
 	opacity: 0;
 	background: rgba(0, 0, 0, 0.44);
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	transition: all 0.3s;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	transition: all 0.5s;
 }
 
 .md-show ~ .md-overlay {
 	opacity: 1;
 	visibility: visible;
+}
+
+.md-show-top ~ .md-overlay {
+    z-index: 30;
 }
 
 /* Effect 1: Fade in and scale up */
@@ -725,9 +622,11 @@ select {
     -ms-transform: scale(0.7);
     transform: scale(0.7);
     opacity: 0;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    transition: all 0.5s;
+    border-radius: 6px;
+    padding: 1em;
 }
 
 .md-show.md-effect-1 .md-content {
